<resources>
    <string name="app_name">TestLynx</string>
    <string name="long_text">ddddddddddddd ddddddddddddddd dddddddddddddd dddddddddddd ddddddddddd ddddd
    ddddddddddddd dddddddddddddddd ddddddddddddd ddddddddddddd ddddddddddddd ddddddddddddd
    ddddddddddddd ddddddddddddd ddddddddddddd ddddddddddddd        ddddddddddddd         ddddddddddddd
    ddddddddddddd        ddddddddddddd         ddddddddddddd         ddddddddddddd        ddddddddddddd
    ddddddddddddd          ddddddddddddd          ddddddddddddd         ddddddddddddd           ddddddddddddd
    ddddddddddddd         ddddddddddddd          ddddddddddddddddddddddddddddddddddddddd     ddddddddddddd

    ddddddddddddd        ddddddddddddd          ddddddddddddd          ddddddddddddd          ddddddddddddd
    ddddddddddddd ddddddddddddd dddddddddddddddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd
    ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd
    ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd
    ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd
    ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd
    ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd
    ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd
    ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd          ddddddddddddd        ddddddddddddd
    </string>

    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>

    <string name="item_feed_main">Feed</string>
    <string name="item_forum_main">Forum</string>
    <string name="item_event_main">Event</string>
    <string name="item_stream_main">Stream</string>
    <string name="item_notif_main">Notifications</string>
    <string name="fragment_feed_toolbar">Feed</string>
    <string name="friends_toolbar_title">Friends</string>
    <string name="open">1</string>
    <string name="close">0</string>

<!--    login fields-->
    <string name="tv_sign_in_login">Sign In</string>
    <string name="et_log_login">Login</string>
    <string name="et_password_login">Password</string>
    <string name="tv_forgot_login">Forgot Password</string>
    <string name="btn_log_login">Login</string>
    <string name="tv_create_login">Don\'t Have An Account? Get One Now!</string>
</resources>
