<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_format_align_justify_black_24dp"
        android:title="@string/item_feed_main"
        app:showAsAction="withText" />
    <item
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/item_forum_main"
        app:showAsAction="withText" />
    <item
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/item_event_main"
        app:showAsAction="withText" />
    <item
        android:icon="@drawable/ic_linked_camera_black_24dp"
        android:title="@string/item_stream_main"
        app:showAsAction="withText" />
    <item
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/item_notif_main"
        app:showAsAction="withText" />
</menu>